--- a/requirements.txt
+++ b/requirements.txt
@@ -17,17 +17,19 @@ grpcio==1.11.0
 httplib2==0.11.3
 idna==2.6
 netaddr==0.7.19
+numpy==1.14.2
 oauth2client==3.0.0
+opencv-python==3.4.0.12
 Pillow==5.1.0
 ply==3.8
+protobuf==3.6.0
 psutil==5.4.5
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 PyJWT==1.6.1
+python-dotenv==0.8.2
 pytz==2018.3
 requests==2.18.4
 rsa==3.4.2
 six==1.11.0
 urllib3==1.22
-numpy==1.14.2
-opencv-python==3.4.0.12
