--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 cachetools==2.0.1
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
 dill==0.2.7.1
 Django==2.0.3
@@ -26,7 +27,11 @@ protobuf==3.6.0
 psutil==5.4.5
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
+pycairo==1.17.1
+pycparser==2.18
+PyGObject==3.28.3
 PyJWT==1.6.1
+python-dateutil==2.7.3
 python-dotenv==0.8.2
 pytz==2018.3
 requests==2.18.4
